Distinguish signal and timeout [Bug #16608]